fixed button contrast

--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ label {
 .search {
     font-size: 18px;
     color: white;
-    background-color: #5DAA17;
+    background-color: #488414;
     border: 0;
     border-radius: 5px;
     padding-left: 12px;
